# serializer version: 1
# name: test_mask_slices[pyramid array, no slices/min/max]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 1]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_mask_slices[sample1, no slices/min/max]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]]
  '''
# ---
# name: test_mask_slices[sample2, no slices/min/max]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]]
  '''
# ---
# name: test_mask_slices[square array, no slices/min/max]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_segment_slices[pyramid height array (2 layers)]
  '''
  [[[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]]
  '''
# ---
# name: test_segment_slices[pyramid height array (5 layers)]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 1]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_segment_slices[sample1 segment with label]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]]
  '''
# ---
# name: test_segment_slices[sample2 segment with label]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]]
  '''
# ---
# name: test_segment_slices[simple three layers with three segments using label]
  '''
  [[[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [0 0 0]
    [0 0 0]
    [3 3 3]
    [0 0 0]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]]
  '''
# ---
# name: test_segment_slices[simple three layers with three segments using watershed]
  '''
  [[[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [4 4 4]
    [4 4 4]
    [4 4 4]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]]
  '''
# ---
# name: test_segment_slices[square height array (5 layers)]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_slicer[pyramid]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [5 5 5 5 5]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_slicer[sample1]
  '''
  [[[-174.70613343 -174.70613343 -174.70613343 -174.70613343 -174.70613343]
    [-172.72802957 -172.72802957 -172.72802957 -172.72802957 -172.72802957]
    [-171.17192119 -171.17192119 -171.17192119 -171.17192119 -171.17192119]
    ...
    [-234.84049096 -234.84049096 -234.84049096 -234.84049096 -234.84049096]
    [-234.15474828 -234.15474828 -234.15474828 -234.15474828 -234.15474828]
    [-234.7613668  -234.7613668  -234.7613668  -234.7613668  -234.7613668 ]]
  
   [[-172.83352844 -172.83352844 -172.83352844 -172.83352844 -172.83352844]
    [-173.3610228  -173.3610228  -173.3610228  -173.3610228  -173.3610228 ]
    [-171.80491443 -171.80491443 -171.80491443 -171.80491443 -171.80491443]
    ...
    [-234.41849546 -234.41849546 -234.41849546 -234.41849546 -234.41849546]
    [-234.33937131 -234.33937131 -234.33937131 -234.33937131 -234.33937131]
    [-236.08010271 -236.08010271 -236.08010271 -236.08010271 -236.08010271]]
  
   [[-174.73250815 -174.73250815 -174.73250815 -174.73250815 -174.73250815]
    [-172.33240879 -172.33240879 -172.33240879 -172.33240879 -172.33240879]
    [-174.25776322 -174.25776322 -174.25776322 -174.25776322 -174.25776322]
    ...
    [-236.10647743 -236.10647743 -236.10647743 -236.10647743 -236.10647743]
    [-234.31299659 -234.31299659 -234.31299659 -234.31299659 -234.31299659]
    [-231.22715456 -231.22715456 -231.22715456 -231.22715456 -231.22715456]]
  
   ...
  
   [[-229.5391726  -229.5391726  -229.5391726  -229.5391726  -229.5391726 ]
    [-227.64019288 -227.64019288 -227.64019288 -227.64019288 -227.64019288]
    [-229.22267598 -229.22267598 -229.22267598 -229.22267598 -229.22267598]
    ...
    [-298.1925641  -298.1925641  -298.1925641  -298.1925641  -298.1925641 ]
    [-300.64541289 -300.64541289 -300.64541289 -300.64541289 -300.64541289]
    [-301.06740839 -301.06740839 -301.06740839 -301.06740839 -301.06740839]]
  
   [[-228.29956084 -228.29956084 -228.29956084 -228.29956084 -228.29956084]
    [-228.40505971 -228.40505971 -228.40505971 -228.40505971 -228.40505971]
    [-226.7962019  -226.7962019  -226.7962019  -226.7962019  -226.7962019 ]
    ...
    [-300.32891628 -300.32891628 -300.32891628 -300.32891628 -300.32891628]
    [-299.74867247 -299.74867247 -299.74867247 -299.74867247 -299.74867247]
    [-299.32667698 -299.32667698 -299.32667698 -299.32667698 -299.32667698]]
  
   [[-225.08184522 -225.08184522 -225.08184522 -225.08184522 -225.08184522]
    [-227.00719965 -227.00719965 -227.00719965 -227.00719965 -227.00719965]
    [-226.00496036 -226.00496036 -226.00496036 -226.00496036 -226.00496036]
    ...
    [-299.51130001 -299.51130001 -299.51130001 -299.51130001 -299.51130001]
    [-297.98156635 -297.98156635 -297.98156635 -297.98156635 -297.98156635]
    [-296.21446023 -296.21446023 -296.21446023 -296.21446023 -296.21446023]]]
  '''
# ---
# name: test_slicer[sample2]
  '''
  [[[-267.23949016 -267.23949016 -267.23949016 -267.23949016 -267.23949016]
    [-267.99564425 -267.99564425 -267.99564425 -267.99564425 -267.99564425]
    [-268.16638872 -268.16638872 -268.16638872 -268.16638872 -268.16638872]
    ...
    [-286.72875199 -286.72875199 -286.72875199 -286.72875199 -286.72875199]
    [-285.7530693  -285.7530693  -285.7530693  -285.7530693  -285.7530693 ]
    [-285.21644382 -285.21644382 -285.21644382 -285.21644382 -285.21644382]]
  
   [[-267.38584256 -267.38584256 -267.38584256 -267.38584256 -267.38584256]
    [-267.84929184 -267.84929184 -267.84929184 -267.84929184 -267.84929184]
    [-267.94686011 -267.94686011 -267.94686011 -267.94686011 -267.94686011]
    ...
    [-287.89957123 -287.89957123 -287.89957123 -287.89957123 -287.89957123]
    [-288.04592363 -288.04592363 -288.04592363 -288.04592363 -288.04592363]
    [-287.82639503 -287.82639503 -287.82639503 -287.82639503 -287.82639503]]
  
   [[-267.53219497 -267.53219497 -267.53219497 -267.53219497 -267.53219497]
    [-267.72733151 -267.72733151 -267.72733151 -267.72733151 -267.72733151]
    [-267.92246805 -267.92246805 -267.92246805 -267.92246805 -267.92246805]
    ...
    [-288.19227604 -288.19227604 -288.19227604 -288.19227604 -288.19227604]
    [-287.77761089 -287.77761089 -287.77761089 -287.77761089 -287.77761089]
    [-287.28976954 -287.28976954 -287.28976954 -287.28976954 -287.28976954]]
  
   ...
  
   [[-172.96414976 -172.96414976 -172.96414976 -172.96414976 -172.96414976]
    [-172.30556394 -172.30556394 -172.30556394 -172.30556394 -172.30556394]
    [-171.45184158 -171.45184158 -171.45184158 -171.45184158 -171.45184158]
    ...
    [-191.96557024 -191.96557024 -191.96557024 -191.96557024 -191.96557024]
    [-191.8436099  -191.8436099  -191.8436099  -191.8436099  -191.8436099 ]
    [-191.94117817 -191.94117817 -191.94117817 -191.94117817 -191.94117817]]
  
   [[-173.11050216 -173.11050216 -173.11050216 -173.11050216 -173.11050216]
    [-172.45191634 -172.45191634 -172.45191634 -172.45191634 -172.45191634]
    [-171.81772259 -171.81772259 -171.81772259 -171.81772259 -171.81772259]
    ...
    [-191.57529716 -191.57529716 -191.57529716 -191.57529716 -191.57529716]
    [-191.79482577 -191.79482577 -191.79482577 -191.79482577 -191.79482577]
    [-191.52651303 -191.52651303 -191.52651303 -191.52651303 -191.52651303]]
  
   [[-172.62266081 -172.62266081 -172.62266081 -172.62266081 -172.62266081]
    [-171.93968293 -171.93968293 -171.93968293 -171.93968293 -171.93968293]
    [-171.30548917 -171.30548917 -171.30548917 -171.30548917 -171.30548917]
    ...
    [-191.08745582 -191.08745582 -191.08745582 -191.08745582 -191.08745582]
    [-191.30698442 -191.30698442 -191.30698442 -191.30698442 -191.30698442]
    [-191.57529716 -191.57529716 -191.57529716 -191.57529716 -191.57529716]]]
  '''
# ---
# name: test_slicer[square]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
